docs/container/demo-code/AzureTodo/Deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: docker.io/magdysalem/mongo:latest
        resources:
          requests:
            cpu: 250m
            memory: 500Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        ports:
        - containerPort: 27017
          name: mongodb
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-svc
spec:
  ports:
  - port: 27017
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
      - name: todo-app
        image: docker.io/magdysalem/nodejstodo:v3
        resources:
          requests:
            cpu: 1000m
            memory: 1Gi
          limits:
            cpu: 2000m
            memory: 2Gi
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
  selector:
    app: todo-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todoapp
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: todoapp.80d1dffe515344e48454.eastus2.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: todo-app-svc
            port: 
              number: 80
